${project_name}.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${project_name}
  labels:
    app: ${project_name}
spec:
  type: LoadBalancer
  externalIPs:
  - ${worker_ip}
  ports:
  - port: 80  # Service port number
    targetPort: 8080  # Port number exposed by the container
    nodePort: 31117 # The real port number of the node
  selector:
    app: ${project_name}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${project_name}-deployment
spec:
  selector:
    matchLabels:
      app: ${project_name}
  template:
    metadata:
      labels:
        app: ${project_name}
    spec:
      containers:
      - image: richizana/${project_name}-services:latest
        name: ${project_name}-container
        ports:
        - containerPort: 8080
