DB-contractsbpm.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-contractsbpm
  namespace: default
spec:
  type: LoadBalancer
  externalIPs:
  - 18.102.106.12
  ports:
  - port: 3306
    nodePort: 31564 
  selector:
    app: mysql-contractsbpm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-contractsbpm
spec:
  selector:
    matchLabels:
      app: mysql-contractsbpm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-contractsbpm
    spec:
      containers:
      - image: richizana/contractsbpm-db
        name: mysql-contractsbpm
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-contractsbpm-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-contractsbpm-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-contractsbpm-pv-claim
