DB-customersdata.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-customersdata
  namespace: default
spec:
  type: LoadBalancer
  externalIPs:
  - 18.102.5.75
  ports:
  - port: 3306
    nodePort: 31563
  selector:
    app: mysql-customersdata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-customersdata
spec:
  selector:
    matchLabels:
      app: mysql-customersdata
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-customersdata
    spec:
      containers:
      - image: richizana/customersdata-db
        name: mysql-customersdata
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-customersdata-persistent-storage
          mountPath: /var/lib/mysql-customersdata
      volumes:
      - name: mysql-customersdata-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-customersdata-pv-claim
