contracts.yaml
apiVersion: v1
kind: Service
metadata:
  name: contracts-service
  labels:
    app: contracts-service
spec:
  type: LoadBalancer
  externalIPs:
  - 18.102.123.83
  ports:
  - port: 88 # Service port number
    targetPort: 8080 # Port number exposed by the container
    nodePort: 31117   # The real port number of the node
  selector:
    app: contracts-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contracts-service-deployment
spec:
  selector:
    matchLabels:
      app: contracts-service
  template:
    metadata:
      labels:
        app: contracts-service
    spec:
      containers:
      - name: contracts-container
        image: richizana/contracts:latest
        ports:
        - containerPort: 8888
