contractsbpm.yaml
apiVersion: v1
kind: Service
metadata:
  name: contractsbpm-service
  labels:
    app: contractsbpm-service
spec:
  type: LoadBalancer
  externalIPs:
  - 18.102.27.151
  ports:
  - port: 88 # Service port number
    targetPort: 8080 # Port number exposed by the container
    nodePort: 31119 # The real port number of the node
  selector:
    app: contractsbpm-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contractsbpm-service-deployment
spec:
  selector:
    matchLabels:
      app: contractsbpm-service
  template:
    metadata:
      labels:
        app: contractsbpm-service
    spec:
      containers:
      - name: contractsbpm-container
        image: richizana/contractsbpm:latest
        ports:
        - containerPort: 8888
