customersdata.yaml
apiVersion: v1
kind: Service
metadata:
  name: customersdata-service
  labels:
    app: customersdata
spec:
  type: LoadBalancer
  externalIPs:
  - 18.102.38.176
  ports:
  - port: 80  # Service port number
    targetPort: 8080  # Port number exposed by the container
    nodePort: 31117 # The real port number of the node
  selector:
    app: customersdata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customersdata-deployment
spec:
  selector:
    matchLabels:
      app: customersdata
  template:
    metadata:
      labels:
        app: customersdata
    spec:
      containers:
      - image: richizana/customersdata-services:latest
        name: customersdata-container
        ports:
        - containerPort: 8080
