mytodos-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-tomcat
  labels:
    app: todos-tomcat
spec:
  type: LoadBalancer
  externalIPs:
  - 15.160.169.124
  ports:
  - port: 88	# Service port number
    targetPort: 8080	# Port number exposed by the container
  selector:
    app: mytodos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytodos-deployment
spec:
  selector:
    matchLabels:
      app: mytodos
  template:
    metadata:
      labels:
        app: mytodos
    spec:
      containers:
      - name: mytodos-container
        image: richizana/mytodos:latest
        ports:
        - containerPort: 8888
