todosmanager-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager-tomcat
  labels:
    app: manager-tomcat
spec:
  type: LoadBalancer
  externalIPs:
   - 15.161.131.9
  ports:
  - port: 80 	# Service port number
    targetPort: 8080 	# Port number exposed by the container
    nodePort: 31117	# The real port number of the node
  selector:
    app: manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager-deployment
spec:
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
      - image: richizana/todosmanag:1.0
        name: manager-container
        ports:
        - containerPort: 8080
