todosmanagerservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: todosmanagerservice
  labels:
    app: todosmanagerservice
spec:
  type: LoadBalancer
  externalIPs:
  - ${worker_ip}
  ports:
  - port: 80  # Service port number
    targetPort: 8080  # Port number exposed by the container
    nodePort: 31117 # The real port number of the node
  selector:
    app: todosmanagerservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todosmanagerservice-deployment
spec:
  selector:
    matchLabels:
      app: todosmanagerservice
  template:
    metadata:
      labels:
        app: todosmanagerservice
    spec:
      containers:
      - image: richizana/todosmanagerservice-services:latest
        name: todosmanagerservice-container
        ports:
        - containerPort: 8080
