Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ec2-35-152-58-135.eu-south-1.compute.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todos-tomcat
            port:
              number: 88
      - path: /
        pathType: Prefix
        backend:
          service:
            name: manager-tomcat
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql
            port:
              number: 3306
